--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 /* Stage */
 
 #stage {
-    background: gray;
+    background: none;
     height: 300px;
     width: 600px;
 }
 
 #stage #star {
- width: 300px;
-    height: 300px;
+ width: 500px;
+    height: 430px;
 }
 
 
